`v1.0.2`
* Added Routes for Response formats.
* Added Images Routes.
* Fixed Headers route response.
* Now IP route, now shows the IPv4 instead of IPV6.
* Fixed browser's caching issues.
* Added Sitemap.
* Some minor bugs and typo fixes.
